--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -88,8 +88,8 @@
   }
   function primera() {
     muestras = 50;
-    fec = ahora();
-    //fec = hoy();
+
+    fec = hoy();
 
     $.post("/updateStatistics", {
       tipo: "_Humedad",
