--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -7,38 +7,39 @@
   var ss;
   var date_string;
   function startTime() {
-    fetch("/ahora")
-      .then(res => res.json())
-      .then(out => {
-        dt = new Date(
-          out.result[0],
-          out.result[1],
-          out.result[2],
-          out.result[3],
-          out.result[4],
-          out.result[5]
-        );
+    $.get("/ahora", function() {}).done(function(out) {
+      reloj(out);
+    });
+  }
+  function reloj(out) {
+    dt = new Date(
+      out.result[0],
+      out.result[1],
+      out.result[2],
+      out.result[3],
+      out.result[4],
+      out.result[5]
+    );
 
-        // ensure date comes as 01, 09 etc
-        DD = ("0" + dt.getDate()).slice(-2);
-        // getMonth returns month from 0
-        MM = ("0" + (dt.getMonth() + 1)).slice(-2);
-        YYYY = dt.getFullYear();
-        hh = ("0" + dt.getHours()).slice(-2);
-        mm = ("0" + dt.getMinutes()).slice(-2);
-        ss = ("0" + dt.getSeconds()).slice(-2);
-        date_string =
-          YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
+    // ensure date comes as 01, 09 etc
+    DD = ("0" + dt.getDate()).slice(-2);
+    // getMonth returns month from 0
+    MM = ("0" + (dt.getMonth() + 1)).slice(-2);
+    YYYY = dt.getFullYear();
+    hh = ("0" + dt.getHours()).slice(-2);
+    mm = ("0" + dt.getMinutes()).slice(-2);
+    ss = ("0" + dt.getSeconds()).slice(-2);
+    date_string = YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
 
-        // will output something like "2019-02-14 11:04:42"
-        if (out.estado == "0") {
-          document.getElementById("manualmode").innerHTML = "";
-        } else {
-          document.getElementById("manualmode").innerHTML = "Modo Manual";
-        }
-        document.getElementById("reloj").innerHTML = date_string;
-      })
-      .catch(err => console.error(err));
+    // will output something like "2019-02-14 11:04:42"
+    if (out.estado == "0") {
+      document.getElementById("manualmode").innerHTML = "";
+    } else {
+      document.getElementById("manualmode").innerHTML = "Modo Manual";
+    }
+    document.getElementById("reloj").innerHTML = date_string;
+
     var t = setTimeout(startTime, 1000);
   }
+  $(document).ready(startTime);
 </script>
