--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -124,54 +124,51 @@
   document.getElementById("autoBTN").addEventListener("click", myFunctionAuto);
 
   function refresh() {
-    console.log("refreshing");
-    fetch("/manualdata")
-      .then(res => res.json())
-      .then(out => {
+    $.get("/manualdata", function() {})
+      .done(function(out) {
         toDo(out);
       })
-      .catch(error => console.error("Error al obtener datos de ManualMode"));
-
-    function toDo(data) {
-      console.log(data);
-      if (data.estado == "0") {
-        console.log("2");
-        document.getElementById("borra").style.visibility = "hidden";
-        document.getElementById("auto").style.visibility = "hidden";
-        document.getElementById("manual").style.visibility = "visible";
-      } else {
-        console.log("3");
-        document.getElementById("manual").style.visibility = "hidden";
-        document.getElementById("borra").style.visibility = "visible";
-        document.getElementById("auto").style.visibility = "visible";
-      }
-
-      console.log(data);
+      .fail(function() {
+        console.log("fail manualData");
+        var t = setTimeout(refresh, 100);
+      });
+  }
+  function toDo(data) {
+    if (data.estado == "0") {
+      document.getElementById("borra").style.visibility = "hidden";
+      document.getElementById("auto").style.visibility = "hidden";
+      document.getElementById("manual").style.visibility = "visible";
+    } else {
+      document.getElementById("manual").style.visibility = "hidden";
+      document.getElementById("borra").style.visibility = "visible";
+      document.getElementById("auto").style.visibility = "visible";
     }
   }
 
   function myFunctionManual() {
-    console.log("Hola ");
-    $.post(
-      "/manual",
-
-      function(err, req, resp) {
+    $.get("/manual", function() {})
+      .done(function(out) {
         refresh();
-      }
-    );
+      })
+      .fail(function() {
+        console.log("fail manual");
+        var t = setTimeout(myFunctionManual, 100);
+      });
     refresh();
     document.getElementById("manualCerrar").click();
   }
 
   function myFunctionAuto() {
     console.log("Hola ");
-    $.post(
-      "/auto",
 
-      function(err, req, resp) {
+    $.get("/auto", function() {})
+      .done(function(out) {
         refresh();
-      }
-    );
+      })
+      .fail(function() {
+        console.log("fail auto");
+        var t = setTimeout(myFunctionAuto, 100);
+      });
     refresh();
     document.getElementById("autoCerrar").click();
   }
