--- a/templates/layout.html
+++ b/templates/layout.html
@@ -129,7 +129,11 @@
   <!-- Optional JavaScript -->
   {% block script %} {% endblock %}
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"
+  ></script>
   <script
     src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
