--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -32,7 +32,7 @@
             >
               <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
 
-              <select id="tipcheckboxoD">
+              <select id="tipoD">
                 <option value="" selected hidden>Seleccione un dato</option>
                 <option value="_Humedad">Humedad</option>
                 <option value="_Temperatura">Temperatura exterior</option>
@@ -129,10 +129,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 <script src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
 <script src="https://www.chartjs.org/samples/latest/utils.js"></script>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"
-></script>
 
 {% include "estadisticasScp.html" %} {% endblock %}
