--- a/templates/layout.html
+++ b/templates/layout.html
@@ -125,6 +125,11 @@
     {% include "footer.html" %}
   </body>
 
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"
+  ></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <!-- Optional JavaScript -->
   {% block script %} {% endblock %}
