--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,13 +29,14 @@ body {
 .pointer {
   cursor: pointer;
 }
-
 .modal-open {
   overflow: visible;
 }
 
-.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
-  padding-right: 0px!important;
+.modal-open,
+.modal-open .navbar-fixed-top,
+.modal-open .navbar-fixed-bottom {
+  padding-right: 0px !important;
 }
 
 div#general3 {
