--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -58,8 +58,8 @@
                   Seleccione Método de fin
                 </label> <br />
 
-                <input id="input-2" type="checkbox" data-off-active-cls="btn-warning"
-                  data-on-active-cls="btn-primary" />
+                <input id="input-2" type="checkbox"  data-off-active-cls="btn-warning pointer"
+                  data-on-active-cls="btn-primary  pointer"  data-on-cls="pointer" data-off-cls="pointer"/>
 
                 <div class="d-flex justify-content-center">
                   <input type="datetime-local" id="login-2" class="fadeIn " name="end" />
