--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -80,8 +80,10 @@
                 <input
                   id="input-3"
                   type="checkbox"
-                  data-off-active-cls="btn-warning"
-                  data-on-active-cls="btn-primary"
+                  data-off-active-cls="btn-warning pointer"
+                  data-on-active-cls="btn-primary pointer"
+                  data-on-cls="pointer"
+                  data-off-cls="pointer"
                 />
 
                 <div id="fin">
