--- a/templates/layout.html
+++ b/templates/layout.html
@@ -136,5 +136,11 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"
   ></script>
-  {% include "reloj.html" %} {% block script %} {% endblock %}
+  {% include "reloj.html" %}
+  <script>
+    $(document).ready(function() {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
+  {% block script %} {% endblock %}
 </html>
