--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -47,7 +47,7 @@
     mm = addZero(mm);
     HH = addZero(HH);
     MM = addZero(MM);
-    return yyyy + "-" + mm + "-" + dd + "T" + HH + ":" + MM;
+    return dd + "-" + mm + "-" + yyyy + "T" + HH + ":" + MM;
   }
   function hoy() {
     var hoy = new Date();
