--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -57,7 +57,7 @@
     dd = addZero(dd);
     mm = addZero(mm);
 
-    return dd + "-" + mm + "-" + yyyy;
+    return yyyy + "-" + mm + "-" + dd;
   }
   var color = Chart.helpers.color;
   var timeFormat = "HH:mm:ss DD-MM-YYYY";
