--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -165,7 +165,8 @@
   }
 
   function actualiza(results) {
-    console.log(results);
+    console.log(results.labels);
+    console.log(results.data);
     chart.data.datasets[0].data = results.data;
     chart.data.labels = dameFecha(results.labels);
     chart.options.tooltips.callbacks.label = item =>
