--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -214,7 +214,7 @@
               time: {
                 parser: timeFormat,
                 //round: "day",
-                tooltipFormat: "ll HH:mm"
+                tooltipFormat: "ll HH:mm:ss"
               },
               scaleLabel: {
                 display: true,
