--- a/templates/footer.html
+++ b/templates/footer.html
@@ -135,17 +135,19 @@
 
           <ul class="list-unstyled">
             <li>
-              <p class="fas fa-home mr-3">
-                <a
-                  id="hvv"
-                  href="https://goo.gl/maps/zCAbqmEj5xm42WPo9"
-                  target="_blank"
-                >
-                  Escuela de Ingeniería Informática. Edificio Departamental de
-                  Informática y Matemáticas. Campus Universitario de Tafira.
-                  35017 Las Palmas de Gran Canaria
-                </a>
-              </p>
+              <a
+                href="https://goo.gl/maps/zCAbqmEj5xm42WPo9"
+                target="_blank"
+                id="hvv"
+              >
+                <p>
+                  <i class="fas fa-home mr-3">
+                    Escuela de Ingeniería Informática. Edificio Departamental de
+                    Informática y Matemáticas. Campus Universitario de Tafira.
+                    35017 Las Palmas de Gran Canaria
+                  </i>
+                </p>
+              </a>
             </li>
             <li>
               <p><i class="fas fa-envelope mr-3"></i> direccion.eii@ulpgc.es</p>
