--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,10 @@
     />
 
     <!-- Font Awesome -->
-
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
     <!-- Bootstrap core CSS -->
 
     <!-- Material Design Bootstrap -->
