--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -79,7 +79,7 @@
   }
   function newDateString(hours, minutes, seconds, day, month, year) {
     return moment()
-      .day(day - 1)
+      .date(day)
       .month(month - 1)
       .year(year)
       .hour(hours)
@@ -166,7 +166,6 @@
 
   function actualiza(results) {
     console.log(results.labels);
-    console.log(dameFecha(results.labels));
     chart.data.datasets[0].data = results.data;
     chart.data.labels = dameFecha(results.labels);
     chart.options.tooltips.callbacks.label = item =>
