--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -61,6 +61,8 @@
         var end = event.end;
         var start = event.start;
         var id = info.event.id;
+        console.log(start);
+        console.log(typeof start);
         $("#finEvento").val(end);
         $("#inicioEvento").val(start);
 
