--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -73,7 +73,7 @@
 
                   <input type="number" id="minutos" name="minutos" min="0" max="59" placeholder="0">
                 </div>
-                <select id="repe">
+             <!--   <select id="repe">
                   <option value="0" selected hidden>¿Desea repetir el evento?</option>
                   <option value="0">Sin repetición</option>
                   <option value="1">Repetición diaria</option>
@@ -94,7 +94,7 @@
                     <label for="meses">Límite de meses:</label>
                     <input type="number" id="meses" name="meses" min="1">
                   </div>
-                </div>
+                </div> -->
 
                 <input type="submit" class="fadeIn fourth" value="Guardar" />
             </form>
