--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block head %} {% endblock %} {% block title
 %}Página Principal{% endblock %} {% block body %}
-<div class="">
+<div class="container">
   {% if primer %}
   <div class="card text-white bg-success mb-2 fadeInDown fadeIn first ">
     <div class="card-header">{{ session["name"] }}</div>
@@ -12,7 +12,7 @@
   {% endif %}
 </div>
 
-<div class="row ">
+<div class="row container">
   <!-- Izquierda -->
 
   <!-- Centro -->
