--- a/templates/main.html
+++ b/templates/main.html
@@ -18,25 +18,28 @@
     <!-- Centro -->
     <div class=" fadeIn first">
       <ul class="list-group ">
-        <li class="list-group-item">
+        <li class="list-group-item bg-primary rounded text-white">
+          Estado actual del Sistema
+        </li>
+        <li class="list-group-item bg-light text-info">
           Humedad: <span class=" ml-3" id="hum"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-white text-danger">
           Temperatura exterior: <span class=" ml-3" id="tem"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-light text-dark">
           Distancia: <span class=" ml-3" id="dis"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-white text-muted">
           Último movimiento detectado: <span class=" ml-3" id="av"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-light text-warning">
           Alarma: <span class=" ml-3" id="al"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-white text-danger">
           Temperatura del Sistema: <span class=" ml-3" id="cpuT"></span>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item bg-light text-success">
           Uso del sistema: <span class=" ml-3" id="cpu"></span>
         </li>
       </ul>
