--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -8,6 +8,8 @@
         console.log("fail data");
         var t = setTimeout(startData, 1000);
       });
+    var $textarea = $("#teexampleFormControlTextarea2xtarea_id");
+    $textarea.scrollTop($textarea[0].scrollHeight);
   }
   function funciona(data) {
     humedad = data.humedad;
