--- a/templates/log.html
+++ b/templates/log.html
@@ -66,10 +66,7 @@
     >
       <div class="">
         <div class="form-group">
-          <textarea
-            class="form-control rounded-0"
-            id="exampleFormControlTextarea2"
-            rows="5"
+          <textarea class="form-control rounded-0" id="aText" rows="5"
             >{{ alarma }}
         </textarea
           >
@@ -82,10 +79,7 @@
       role="tabpanel"
       aria-labelledby="contact-tab"
     >
-      <textarea
-        class="form-control rounded-0"
-        id="exampleFormControlTextarea2"
-        rows="5"
+      <textarea class="form-control rounded-0" id="mText" rows="5"
         >{{ movimiento }}
 </textarea
       >
@@ -96,10 +90,7 @@
       role="tabpanel"
       aria-labelledby="salida-tab"
     >
-      <textarea
-        class="form-control rounded-0"
-        id="exampleFormControlTextarea2"
-        rows="5"
+      <textarea class="form-control rounded-0" id="outText" rows="5"
         >{{ salida }}
 </textarea
       >
