--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -25,9 +25,16 @@
     document.getElementById("al").innerHTML = alarmaText;
     document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
     document.getElementById("cpu").innerHTML = usoCPU.substr(20);
-    var textarea = document.getElementById("mText");
-    textarea.scrollTop = textarea.scrollHeight;
+
     var t = setTimeout(startData, 5000);
   }
-  $(document).ready(startData);
+  $(document).ready(function() {
+    var textarea = document.getElementById("aText");
+    var textarea1 = document.getElementById("mText");
+    var textarea2 = document.getElementById("outText");
+    textarea.scrollTop = textarea.scrollHeight;
+    textarea2.scrollTop = textarea.scrollHeight;
+    textarea3.scrollTop = textarea.scrollHeight;
+    startData();
+  });
 </script>
