--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -33,8 +33,8 @@
     var textarea1 = document.getElementById("mText");
     var textarea2 = document.getElementById("outText");
     textarea.scrollTop = textarea.scrollHeight;
-    textarea2.scrollTop = textarea.scrollHeight;
-    textarea3.scrollTop = textarea.scrollHeight;
+    textarea2.scrollTop = textarea2.scrollHeight;
+    textarea3.scrollTop = textarea3.scrollHeight;
     startData();
   });
 </script>
